[gd_scene load_steps=10 format=3 uid="uid://doy4bb45g1085"]

[ext_resource type="Script" uid="uid://dhu64x781l8vf" path="res://Scripts/mortar_and_pestle.gd" id="1_765ix"]
[ext_resource type="Texture2D" uid="uid://bwuy7uhqykb0c" path="res://Assets/Stations/MortarAndPestleTemp.png" id="2_765ix"]
[ext_resource type="PackedScene" uid="uid://b81j4cgq1flrb" path="res://Scenes/Stations/proximity_trigger.tscn" id="3_5wmxq"]
[ext_resource type="Texture2D" uid="uid://cp1x0niouvpps" path="res://Assets/Clocks/clock_progress_under.png" id="4_5wmxq"]
[ext_resource type="Texture2D" uid="uid://0h57n21pgy7u" path="res://Assets/Clocks/clock_progress_over.png" id="5_org45"]
[ext_resource type="Texture2D" uid="uid://o7sevo0ogp0" path="res://Assets/ItemBoxes/Wheat_Item_Background_Temp.png" id="6_org45"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2a06r"]
atlas = ExtResource("2_765ix")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ru2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a06r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5f1qk"]
size = Vector2(24, 19.5)

[node name="MortarAndPestle" type="Node2D"]
script = ExtResource("1_765ix")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0ru2c")

[node name="ProximityTrigger" parent="." instance=ExtResource("3_5wmxq")]
collision_layer = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_5f1qk")
debug_color = Color(0.851513, 0.323311, 0.481857, 0.42)

[node name="ActionButton" type="Button" parent="."]
visible = false
offset_left = -22.0
offset_top = -55.0
offset_right = 19.0
offset_bottom = -24.0
scale = Vector2(1.01618, 0.897703)
text = "Crush"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="StationProgressRadial" type="TextureProgressBar" parent="."]
offset_left = -11.0
offset_top = -34.0
offset_right = 29.0
offset_bottom = 6.00001
scale = Vector2(0.700546, 0.689436)
fill_mode = 4
texture_under = ExtResource("4_5wmxq")
texture_progress = ExtResource("5_org45")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(0.526706, 0.520428)
texture = ExtResource("6_org45")

[connection signal="body_entered" from="ProximityTrigger" to="." method="_on_proximity_trigger_body_entered"]
[connection signal="body_exited" from="ProximityTrigger" to="." method="_on_proximity_trigger_body_exited"]
[connection signal="pressed" from="ActionButton" to="." method="_on_crush_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
